--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "18.0.9",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "^8.28.0",
     "jest": "28.1.0",
     "jest-environment-jsdom": "28.1.0",
     "prettier": "2.8.0",
