--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.2.0",
+    "eslint-config-next": "^13.0.5",
     "next": "latest",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
